<resources>
    <string name="app_name">Messenger</string>
    <string name="app_name_short">Messenger</string>
    <string name="app_error_dialog_title">Messenger</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_enable">Turn On</string>
    <string name="dialog_not_now">Not Now</string>
    <string name="generic_loading">Loading…</string>
    <string name="upgrade_header">This version of Messenger is out of date.</string>
    <string name="upgrade_button">Get the Latest Version</string>
    <string name="upgrade_log_out_button">Log Out</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="start_screen_facebook_login">Continue</string>
    <string name="start_screen_somebody_else">Log In As Somebody Else</string>
    <string name="start_screen_sso_text">Logged in as [[name]] ([[not_you_link]])</string>
    <string name="start_screen_sso_text_not_you_link">Not you?</string>
    <string name="login_screen_user_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_login_button">Log In to Facebook</string>
    <string name="login_screen_signup_button">Sign up for Facebook</string>
    <string name="login_screen_login_progress">Logging in</string>
    <string name="login_screen_login_failed">Failed to log in</string>
    <string name="login_screen_facebook_connect_failure">Failed to connect through facebook</string>
    <string name="logging_in_progress">Logging in…</string>
    <string name="login_failed_message">Please enter the email and password you use to log in to Facebook.</string>
    <string name="login_approval_instructions">Login approvals are on. Expect an SMS shortly with a code to use for log in.</string>
    <string name="login_approval_code_hint">Code</string>
    <string name="login_approval_login_button">Continue</string>
    <string name="logging_out_progress">Logging out…</string>
    <string name="thread_list_title">Messages</string>
    <string name="thread_start_thread_button">Start a Conversation</string>
    <string name="thread_list_default_new_thread_list_item_text">New Conversation</string>
    <string name="thread_list_loading">Loading…</string>
    <string name="thread_new_conversation_title">New Message</string>
    <string name="thread_list_no_threads">No Conversations</string>
    <string name="thread_context_menu_title">Conversation</string>
    <string name="thread_context_menu_delete_conversation">Delete</string>
    <string name="thread_context_menu_archive_conversation">Archive</string>
    <string name="thread_name_with_only_you">Just You</string>
    <string name="thread_name_untitled">Untitled Conversation</string>
    <string name="thread_name_me_prefix">Me:</string>
    <string name="thread_name_n_more">+%1$d</string>
    <string name="thread_loading">Loading…</string>
    <string name="thread_no_updates">No messages in this converation.</string>
    <string name="thread_view_messages_tab_title">Messages</string>
    <string name="thread_view_details_tab_title">Settings</string>
    <string name="thread_view_members_tab_title">People</string>
    <string name="thread_view_map_tab_title">Map</string>
    <string name="thread_view_members_add_button_text">Add More People</string>
    <string name="thread_view_members_create_group_button_text">Create Group Conversation</string>
    <string name="message_truncated_text">[message truncated -- click to view]</string>
    <string name="thread_view_load_more">Load more</string>
    <string name="thread_view_loading_more">Loading…</string>
    <string name="add_members_warning">People you add will see all previous messages in this conversation.</string>
    <string name="add_members_button_text">Add to Conversation</string>
    <string name="add_members_missing_people">You must enter a personʼs name, email address, or telephone number to add people to the thread.</string>
    <string name="add_members_progress">Adding people…</string>
    <string name="thread_view_pending_send_sending_text">Sending…</string>
    <string name="thread_view_pending_send_send_failed_text">Send Failed.</string>
    <string name="thread_view_pending_send_sent">Sent!</string>
    <string name="thread_view_pending_send_send_retrying">Retrying in %d seconds.</string>
    <string name="thread_view_pending_send_send_retry_now_link">Retry Now</string>
    <string name="thread_view_pending_send_send_retry_link">Retry</string>
    <string name="thread_view_pending_send_send_cancel_link">Cancel</string>
    <string name="thread_view_saving_progress">Saving…</string>
    <string name="photo_dialog_take_photo">Take Photo</string>
    <string name="photo_dialog_choose_photo">Choose Photo</string>
    <string name="photo_dialog_image_search">Image Search</string>
    <string name="photo_dialog_record_video">Record Video</string>
    <string name="photo_dialog_record_audio">Record Audio</string>
    <string name="photo_dialog_remove">Remove</string>
    <string name="thread_view_set_thread_name_hint">Name Your Conversation</string>
    <string name="thread_view_details_leave">Leave Conversation</string>
    <string name="notification_enable_notifications">Alerts On</string>
    <string name="notification_disable_notifications">Alerts Off</string>
    <string name="notification_mute_for_one_hour_notifications">Alerts Off for 1 Hour</string>
    <string name="notification_mute_until_8am">Alerts Off Until 8:00am</string>
    <string name="global_notifications_disabled">Alerts are off for all conversations.</string>
    <string name="global_notifications_muted_until">Alerts are off for all conversations until %s.</string>
    <string name="thread_notifications_enabled">Alerts On</string>
    <string name="thread_notifications_disabled">Alerts Off</string>
    <string name="thread_notifications_muted_one_hour">Alerts Off for 1 Hour</string>
    <string name="thread_notifications_muted_until_8am">Alerts Off Until 8:00am</string>
    <string name="thread_notifications_muted_until">Alerts are off until %s.</string>
    <string name="thread_notifications_dialog_title">All Conversations</string>
    <string name="thread_notifications_global_disabled">Alerts are off for all conversations.</string>
    <string name="thread_notifications_title">This Conversation</string>
    <string name="global_notifications_muted_msg">Alerts are off for all conversations.</string>
    <string name="global_notifications_disabled_msg">Alerts are off for all conversations.</string>
    <string name="global_notifications_goto_settings">Go to settings</string>
    <string name="thread_delete_confirm_title">Delete This Entire Conversation?</string>
    <string name="thread_delete_confirm_msg">Once you delete your copy of the conversation, it cannot be undone.</string>
    <string name="thread_delete_confirm_ok_button">Delete Conversation</string>
    <string name="thread_delete_progress">Deleting thread…</string>
    <string name="thread_leave_confirm_title">Leave Conversation?</string>
    <string name="thread_leave_confirm_msg">Are you sure you want to leave this conversation? You will no longer receive new messages.</string>
    <string name="thread_leave_confirm_ok_button">Leave</string>
    <string name="thread_leave_progress">Leaving thread…</string>
    <string name="thread_remove_member_confirm_heading">Remove this member?</string>
    <string name="thread_remove_member_confirm_msg">Are you sure you want to remove \"%s\" from this conversation?</string>
    <string name="thread_remove_member_confirm_ok_button">Remove Member</string>
    <string name="thread_remove_member_progress">Removing member…</string>
    <string name="thread_member_email_menu_title">Email</string>
    <string name="thread_member_email_menu_dialog_chooser">Send mail…</string>
    <string name="thread_member_remove_menu_title">Remove from conversation</string>
    <string name="thread_member_remove_menu_description">Remove %sʼs access to the conversation</string>
    <string name="thread_member_remove_menu_description_no_name">Remove the memberʼs access to the conversation</string>
    <string name="thread_member_leave_menu_title">Leave the conversation</string>
    <string name="thread_member_leave_menu_description">Remove yourself from the conversation</string>
    <string name="thread_member_delete_menu_title">Delete the conversation</string>
    <string name="thread_member_delete_menu_description">Delete the conversation from your mailbox</string>
    <string name="contacts_loading">Loading contacts…</string>
    <string name="add_person_by_email_auto_complete_text">Add email address %s…</string>
    <string name="contact_picker_to_heading">To:</string>
    <string name="contact_picker_add_heading">Add:</string>
    <string name="contact_picker_basket_hint1">Friends or Contacts</string>
    <string name="add_person_by_phone_auto_complete_text">Add phone number %s…</string>
    <string name="add_person_dialog_name_hint">Name</string>
    <string name="add_person_dialog_email_hint">Email Address</string>
    <string name="add_person_dialog_phone_hint">Mobile Phone Number</string>
    <string name="add_person_dialog_add_button">Add</string>
    <string name="add_person_dialog_error_missing_name">Please enter a name.</string>
    <string name="add_person_dialog_error_invalid_email_address">Please enter a valid email address.</string>
    <string name="add_person_dialog_error_invalid_phone_number">Please enter a valid phone number.</string>
    <string name="add_person_context_menu_remove">Remove</string>
    <string name="context_picker_identifier_dialog_title">Message %s at:</string>
    <string name="context_picker_identifier_dialog_facebook_messages">Facebook Messages</string>
    <string name="context_picker_identifier_dialog_different_number">A different number</string>
    <string name="pull_to_refresh_pull_label">Pull down to refresh…</string>
    <string name="pull_to_refresh_push_label">Push up to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Updating…</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_new_thread">New Message</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Log Out</string>
    <string name="preference_notifications_group_title">Notifications</string>
    <string name="preference_notifications_enabled_title">Alerts</string>
    <string name="preference_notifications_sound_enabled_title">Sound</string>
    <string name="preference_notifications_sound_enabled_description">Play when messages arrive</string>
    <string name="preference_notifications_vibrate_enabled_title">Vibrate</string>
    <string name="preference_notifications_vibrate_enabled_description">Vibrate when messages arrive</string>
    <string name="preference_notifications_led_enabled_title">Light</string>
    <string name="preference_notifications_led_enabled_description">Blink when messages arrive</string>
    <string name="preference_notifications_ringtone_title">Ringtone</string>
    <string name="preference_notifications_ringtone_description">Set notification ringtone</string>
    <string name="preference_advanced_group_title">Advanced</string>
    <string name="confirm_phone_number_title">Enter Confirmation Code</string>
    <string name="confirm_phone_number_header">Enter the confirmation code from the text message sent to your phone.</string>
    <string name="confirm_phone_number_hint">confirmation code</string>
    <string name="confirm_phone_number_continue_button">Continue</string>
    <string name="confirm_phone_number_resend_text">Resend Code</string>
</resources>