<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_preferences" android:id="@id/preferences" android:title="@string/menu_preferences" />
    <item android:icon="@drawable/ic_menu_refresh" android:id="@id/refresh" android:title="@string/menu_refresh" />
    <item android:icon="@drawable/ic_menu_add" android:id="@id/new_thread" android:title="@string/menu_new_thread" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help" android:title="@string/menu_help" />
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@id/about" android:title="@string/menu_about" />
    <item android:icon="@drawable/ic_lock_power_off" android:id="@id/logout" android:title="@string/menu_logout" />
</menu>