<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="/orca"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_notifications_group_title">
        <com.facebook.orca.prefs.NotificationEnabledPreference android:title="@string/preference_notifications_enabled_title" android:key="/preferences/notifications/enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notifications_sound_enabled_title" android:key="/preferences/notifications/sound_enabled" android:summary="@string/preference_notifications_sound_enabled_description" android:dependency="/preferences/notifications/enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notifications_vibrate_enabled_title" android:key="/preferences/notifications/vibrate_enabled" android:summary="@string/preference_notifications_vibrate_enabled_description" android:dependency="/preferences/notifications/enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notifications_led_enabled_title" android:key="/preferences/notifications/led_enabled" android:summary="@string/preference_notifications_led_enabled_description" android:dependency="/preferences/notifications/enabled" android:defaultValue="true" />
        <RingtonePreference android:title="@string/preference_notifications_ringtone_title" android:key="/preferences/notifications/ringtone_uri" android:summary="@string/preference_notifications_ringtone_description" android:dependency="/preferences/notifications/enabled" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" android:showDefault="true" />
        <com.facebook.orca.prefs.LocationServicesPreference android:title="Location Services" android:key="/preferences/location_services" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceScreen android:title="@string/preference_advanced_group_title" android:key="/orca/advanced">
        <intent android:targetPackage="com.facebook.orca" android:action="android.intent.action.VIEW" android:targetClass="OrcaAdvancedPreferenceActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Internal" android:key="/orca/internal">
        <intent android:targetPackage="com.facebook.orca" android:action="android.intent.action.VIEW" android:targetClass="OrcaInternalPreferenceActivity" />
    </PreferenceScreen>
</PreferenceScreen>