<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/login_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:orca="http://schemas.android.com/apk/res/com.facebook.orca">
    <com.facebook.orca.common.ui.titlebar.TitleBar android:id="@id/phone_screen_titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content" orca:title="@string/confirm_phone_number_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/confirm_phone_number_header" />
            <EditText android:textColor="@color/facebook_blue" android:id="@id/confirmation_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/confirm_phone_number_hint" android:lines="1" android:capitalize="none" android:inputType="textVisiblePassword" />
            <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/confirm_button" android:background="@drawable/login_primary_button" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/confirm_phone_number_continue_button" />
            <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/confirm_resend_button" android:background="@drawable/confirm_phone_secondary_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/confirm_phone_number_resend_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>