<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/grey40" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/thread_notifications_title" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/thread_view_notifications_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/thread_view_notifications_options" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/thread_view_notifications_item_alerts_on" android:background="@android:drawable/list_selector_background" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:text="@string/thread_notifications_enabled" android:drawableRight="@drawable/checkbox" />
            <View android:background="@drawable/default_separator_color" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/thread_view_notifications_item_alerts_mute_one_hour" android:background="@android:drawable/list_selector_background" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:text="@string/thread_notifications_muted_one_hour" />
            <View android:background="@drawable/default_separator_color" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/thread_view_notifications_item_alerts_mute_morning" android:background="@android:drawable/list_selector_background" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:text="@string/thread_notifications_muted_until_8am" />
            <View android:background="@drawable/default_separator_color" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/thread_view_notifications_item_alerts_off" android:background="@android:drawable/list_selector_background" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:text="@string/thread_notifications_disabled" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/thread_view_notifications_item_global_options" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/bright_red_warning_color" android:gravity="center_vertical" android:id="@id/thread_view_notifications_item_global_alert_message" android:background="@android:drawable/list_selector_background" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:text="@string/thread_notifications_global_disabled" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>