<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/login_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:orca="http://schemas.android.com/apk/res/com.facebook.orca">
    <LinearLayout android:id="@id/dummy_focus_elt" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/login_logo_bolt" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_logo_messenger" />
            <RelativeLayout android:orientation="vertical" android:background="@drawable/login_table_background" android:layout_width="fill_parent" android:layout_height="90.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <EditText android:textSize="16.0dip" android:textColor="@android:color/black" android:id="@id/email" android:background="@android:color/transparent" android:paddingTop="12.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="10.0dip" android:hint="@string/login_screen_user_hint" android:lines="1" android:capitalize="none" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="textNoSuggestions|textEmailAddress" />
                <EditText android:textSize="16.0dip" android:textColor="@android:color/black" android:id="@id/password" android:background="@android:color/transparent" android:paddingTop="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/login_screen_password_hint" android:lines="1" android:capitalize="none" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:inputType="textPassword" />
            </RelativeLayout>
            <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/grey33" android:id="@id/login" android:background="@drawable/login_primary_button" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/login_screen_login_button" android:shadowColor="@android:color/white" android:shadowDy="1.0" android:shadowRadius="1.0" />
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/signup" android:background="@drawable/login_secondary_button" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/login_screen_signup_button" android:shadowColor="#4c000000" android:shadowDy="-1.0" android:shadowRadius="1.0" />
</LinearLayout>